# PikoClaw

./: .gitignore  Cargo.toml  LICENSE  README.md  STATUS.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
crates/piko-agent/: Cargo.toml
crates/piko-agent/src/: agent.rs  agent_loop.rs  agent_tool.rs  context.rs  lib.rs  output.rs
crates/piko-api/: Cargo.toml
crates/piko-api/src/: api_client.rs  client.rs  cost.rs  error.rs  google.rs  lib.rs  model_registry.rs  request.rs  response.rs  stream.rs
crates/piko-config/: Cargo.toml
crates/piko-config/src/: claudemd.rs  config.rs  defaults.rs  env.rs  lib.rs  loader.rs
crates/piko-mcp/: Cargo.toml
crates/piko-mcp/src/: client.rs  lib.rs  mcp_list_resources.rs  mcp_read_resource.rs  mcp_tool.rs  protocol.rs  server_config.rs
crates/piko-mcp/src/transport/: sse.rs  stdio.rs
crates/piko-oauth/: Cargo.toml
crates/piko-oauth/src/: browser.rs  callback_server.rs  constants.rs  crypto.rs  lib.rs  storage.rs  token.rs
crates/piko-permissions/: Cargo.toml
crates/piko-permissions/src/: checker.rs  default.rs  lib.rs  policy.rs  rules.rs
crates/piko-session/: Cargo.toml
crates/piko-session/src/: fs_store.rs  index.rs  lib.rs  session.rs  store.rs
crates/piko-skills/: Cargo.toml
crates/piko-skills/src/: dispatcher.rs  lib.rs  loader.rs  registry.rs  skill.rs
crates/piko-skills/src/built_ins/: mod.rs
crates/piko-tools/: Cargo.toml
crates/piko-tools/src/: apply_patch.rs  ask_user.rs  bash.rs  batch_edit.rs  brief.rs  cron.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  notebook_edit.rs  plan_mode.rs  powershell.rs  registry.rs  remote_trigger.rs  send_message.rs  sleep.rs  synthetic_output.rs  tasks.rs  todo_write.rs  tool_search.rs  tool_trait.rs  web_fetch.rs  web_search.rs  worktree.rs
crates/piko-tui/: Cargo.toml
crates/piko-tui/src/: app.rs  events.rs  highlight.rs  history.rs  image_paste.rs  lib.rs  model_picker.rs  onboarding.rs  render.rs  slash_menu.rs  theme.rs  tui_output.rs  tui_permissions.rs
crates/piko-tui/src/widgets/: chat_pane.rs  input_bar.rs  mod.rs  status_bar.rs
crates/piko-types/: Cargo.toml
crates/piko-types/src/: error.rs  lib.rs  message.rs  model.rs  tool.rs
docs/: DEPLOY.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/design-spec/: 01_color_theme_system.md  02_layout_and_spacing.md  03_input_bar.md  04_message_rendering.md  05_file_image_upload.md  06_status_bar.md  07_permission_dialogs.md  08_notifications_alerts.md  09_progress_loading.md  10_welcome_onboarding.md  11_symbols_glyphs.md  12_keyboard_help.md  INDEX.md
docs/spec/: 01_api_client.md  02_core_agent_loop.md  03_tools_builtin.md  04_tools_advanced.md  05_permissions.md  06_session_persistence.md  07_tui.md  08_slash_commands.md  09_mcp.md  10_config_claudemd.md  11_prompt_caching.md  12_hooks_system.md  13_extended_thinking.md  14_vim_keybindings.md  15_image_input.md  16_memory_memdir.md  17_plan_mode.md  18_worktrees.md  19_task_system.md  20_auto_compact.md  21_multi_agent.md  22_ide_integration.md  23_bridge_remote.md  24_voice_input.md  25_plugins.md  26_output_styles.md  27_cron_scheduler.md  28_mcp_resources.md  29_session_commands.md  30_system_prompt_architecture.md  31_cost_tracking.md  32_settings_layers.md  33_buddy_companion.md  INDEX.md
src/: cli.rs  main.rs
