[package]
name = "piko-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration management for PikoClaw"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
piko-types.workspace = true
