[package]
name = "piko-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session management for PikoClaw"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
directories.workspace = true
tracing.workspace = true
async-trait.workspace = true
piko-types.workspace = true
